fix IE alignment of image

--- a/sass/core/view/_mediaView.scss
+++ b/sass/core/view/_mediaView.scss
@@ -46,7 +46,11 @@ $_spreadAt: large;
 		@include align-items(center);
 		@include display(flex);
 		@include justify-content(center);
-		padding: 0;
+
+		// fixes horizontal alignment of image
+		// within bounds for IE10, IE11, IE Edge
+		-ms-flex-pack: start;
+
 		@include atMediaUp($_spreadAt) {
 			min-height: 100vh;
 		}
